--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Moroccan-Couscous.html" target="_blank">Moroccan Chicken and Whole Grain Couscous</a>
+
+    <ul>
+        <li><a href="recipes/Moroccan-Couscous.html" target="_blank">Moroccan Chicken and Whole Grain Couscous</a></li><br/>
+        <li><a href="recipes/lamb-souvlaki.html" target="_blank">Lamb Soulvaki</a></li><br/>
+        <li><a href="recipes/roasted-potatoes.html" target="_blank">Roasted New Red Potatoes</a></li>
+    </ul>
+    
 </body>
 
 </html>
