--- a/recipes/Moroccan-Couscous.html
+++ b/recipes/Moroccan-Couscous.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moroccan Chicken and Whole Grain Couscous</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
